# parallel-grep

./: CMakeLists.txt  README.md  grep-main.cpp  grep.cpp  grep.h
